fix(about): use full width on small screens

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -62,3 +62,11 @@
 .experience__teaser:hover {
   background-color: rgba($green, 0.25);
 }
+
+@media(max-width: 700px) {
+  .experience__description--open {
+    width: 100%;
+    margin: auto;
+    padding: 0 .5rem;
+  }
+}
